--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gloomy",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
     "clone": "^1.0.4",
     "concurrently": "^3.5.1",
     "deep-object-diff": "^1.1.0",
+    "emoji-dictionary": "^1.0.9",
     "history": "^4.7.2",
     "lzutf8": "^0.5.0",
     "moment": "^2.21.0",
@@ -18,6 +19,7 @@
     "react-card-flip": "^0.2.1",
     "react-clipboard.js": "^1.1.3",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
